Fri Jun 12 16:12:36 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/logWalker.mpc:
        
          Cannot build on ace_for_tao platforms.

Fri Jun 12 14:29:55 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tao/Block_Flushing_Strategy.h:
        * tao/Block_Flushing_Strategy.cpp:
        * tao/Flushing_Strategy.h:
        * tao/Flushing_Strategy.cpp:
        * tao/Transport.cpp:

          If send() returns -1 with EWOULDBLOCK and the Flushing Strategy is
          blocking, return -1 instead of 0.  This is an error condition
          because TAO shouldn't see EWOULDBLOCK with a blocking socket, and
          the transport must be closed to avoid looping indefinitely in the
          flushing strategy's flush_transport().

Fri Jun 12 11:16:39 UTC 2009  Olli Savia  <ops@iki.fi>

        * utils/logWalker/Invocation.cpp:
          Fixed memset's parameter order.

Fri Jun 12 10:25:58 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/Invocation.cpp:

          HPUX apparently uses something novel for either size_t or ACE_CDR::ULong.

Fri Jun 12 02:05:32 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/logWalker.cpp:

          Clean up WChar errors.

Thu Jun 11 23:16:41 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * NEWS:

          Added entry for bug #3688 fix.

Thu Jun 11 19:29:51 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * PROBLEM-REPORT-FORM:

          Added additional PRF question about build method (commit performed
          on behalf of Chris Cleeland).

Thu Jun 11 19:19:42 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * utils/logWalker/Invocation.cpp:

          Cast to int to force ternary operator's type to int, avoiding a
          warning on GCC 4.0.2 on Solaris.

Thu Jun 11 18:19:57 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * utils/logWalker/Invocation.cpp:

          ACE CDR can't be used with size_t because its size varies on